[project]
name = "f7"
version = "0.1.0"
description = "Personal finance CLI wrapper for hledger"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.scripts]
f7 = "f7:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["f7.py"]
